# QQImageProcess

./: .gitignore  CMakeLists.txt  QQImageProcess.pro  README.md
Src/: ImageProcessTest.cpp  ImageProcessTest.h  Samples.cpp  Samples.h  main.cpp
Src/ImageProcess/: Bmp.cpp  Bmp.h  Edge.cpp  Edge.h  Filter.cpp  Filter.h  GeometryTransformation.cpp  GeometryTransformation.h  GrayTransformation.cpp  GrayTransformation.h  Histogram.cpp  Histogram.h  Utility.cpp  Utility.h
Src/Utility/: Alloc.cpp  Alloc.h  BmpDefinition_Linux.h  BmpDefinition_Windows.h  CommonDefinition.h  Mat.h
Windows/VS2013/QQImageProcess/: QQImageProcess.sln
Windows/VS2013/QQImageProcess/Debug/: QQImageProcess.lib
Windows/VS2013/QQImageProcess/QQImageProcess/: QQImageProcess.vcxproj  QQImageProcess.vcxproj.filters
Windows/VS2013/QQImageProcess/Release/: QQImageProcess.lib
